sumo/tests/duarouter/alternatives/style1_input/errors/vehicle/vehicle_false_departlane/errors.duarouter
Error: Invalid departlane definition for vehicle '1'
Quitting (on error).
